--- a/test/code.yml
+++ b/test/code.yml
@@ -1,67 +1,79 @@
 ---
+name: inline code
 in: 'This is an empty dictionary: @{}@'
 out: '<p>This is an empty dictionary: <code>{}</code></p>'
 ---
+name: inline code escapement
 in: 'Please type @cat file.txt > otherfile.txt@ at the prompt.'
 out: '<p>Please type <code>cat file.txt &gt; otherfile.txt</code> at the prompt.</p>'
 ---
+name: escaping in blockcode
 in: 'bc. This is within a block of code, so < and > should be entities.  You can talk about a <p> tag if you wish and it will be properly escaped.'
 out: '<pre><code>This is within a block of code, so &lt; and &gt; should be entities.  You can talk about a &lt;p&gt; tag if you wish and it will be properly escaped.</code></pre>'
 ---
+name: escaping in normal text
 in: |-
-  This is a regular paragraph.  AT&T. Barnes &#38; Noble. &pound;38 > $38.
-  
-  bc. This is a block of code.  You might want to write about the > symbol, which in HTML source is &gt;.
+  This is a regular paragraph.  AT&T. &pound;38 > $38.
 out: |-
-  <p>This is a regular paragraph.  AT&amp;T. Barnes &#38; Noble. &pound;38 &gt; $38.</p>
-  <pre><code>This is a block of code.  You might want to write about the &gt; symbol, which in HTML source is &amp;gt;.</code></pre>
+  <p>This is a regular paragraph.  AT&amp;T. &pound;38 &gt; $38.</p>
 ---
+name: preservation of existing entities
+in: "Math fact: 3 &lt; 5 &amp; 5 &gt; 3 but &pound;6 &#62; $6.
+"
+out: "<p>Math fact: 3 &lt; 5 &amp; 5 &gt; 3 but &pound;6 &#62; $6.</p>"
+---
+name: escaping of existing entities in blockcode
+in: "bc. Math fact: 3 &lt; 5 &amp; 5 &gt; 3 but &pound;5 &#62; $5.
+"
+out: "<pre><code>Math fact: 3 &amp;lt; 5 &amp;amp; 5 &amp;gt; 3 but &amp;pound;5 &amp;#62; $5.</code></pre>"
+---
+name: nested pre tags
 in: |-
-  Testing nested pre tags...
-  
   <pre>
   <code>
-    Good code here.
+    Properly escaped here.
   
     <pre>
       a = 1
     </pre>
   
-    Bad code here.
-  
-    <script language="JavaScript">
-      window.open( "about:blank" );
-    </script>
+    Still in the pre.
   </code>
   </pre>
-out: |-
-  <p>Testing nested pre tags&#8230;</p>
-  
+out: |-  
   <pre>
   <code>
-    Good code here.
+    Properly escaped here.
   
     &lt;pre&gt;
       a = 1
     &lt;/pre&gt;
   
-    Bad code here.
-  
-    &lt;script language="JavaScript"&gt;
-      window.open( "about:blank" );
-    &lt;/script&gt;
+    Still in the pre.
   </code>
   </pre>
 ---
+name: no formatting within pre
 in: |-
   <pre>
-  *** test
+  # *test*
+  __not italics__
   </pre>
 out: |-
   <pre>
-  *** test
+  # *test*
+  __not italics__
   </pre>
 ---
+name: no formatting within blockcode
+in: |-
+  bc. __not italics__
+out: |-
+  <pre><code>
+  __not italics__
+  </code></pre>
+---
+name: double-equals means notextile
 in: |-
   p. Regular paragraph
 
@@ -79,12 +91,13 @@ out: |-
 
   <p>Back to normal.</p>
 ---
+name: notextile tags
 in: |-
   <notextile>
-  *** test
+  # *test*
   </notextile>
 out: |-
-  *** test
+  # *test*
 ---
 in: '*this <span></span> is strong*'
 out: '<p><strong>this <span></span> is strong</strong></p>'
@@ -92,19 +105,7 @@ out: '<p><strong>this <span></span> is strong</strong></p>'
 in: '*this <span>test</span> is strong*'
 out: '<p><strong>this <span>test</span> is strong</strong></p>'
 ---
-in: |-
-  __italics__
-  
-  bc. __not italics__
-  
-  <pre><code>__also not italics__</code></pre>
-out: |-
-  <p><i>italics</i></p>
-  
-  <pre><code>__not italics__</code></pre>
-  
-  <pre><code>__also not italics__</code></pre>
----
+name: code in list items
 in: |-
   * @foo@
   * @bar@
@@ -116,18 +117,8 @@ out: |-
   	<li><code>bar</code></li>
   	<li>and <code>x</code> is also.</li>
   </ul>
-
-
 ---
-in: |-
-  bc. <hello>
-  
-  <code> <hello> </code>
-out: |-
-  <pre><code>&lt;hello&gt;</code></pre>
-  
-  <p><code> &lt;hello&gt; </code></p>
----
+name: extended block code
 in: |-
   If you have a line or two of code or HTML to embed, use extended block code like so:
 
@@ -149,6 +140,7 @@ out: |-
   
   <p>And then go back with a normal paragraph.</p>
 ---
+name: no breaks between HTML elements
 in: |-
   <ul>
     <li>You can put HTML code</li>
@@ -166,6 +158,7 @@ out: |-
     <li>or wrap it in a p tag</li>
   </ul>
 ---
+name: mixing of textile and HTML
 in: |-
   <img src="test.jpg" />
   
