--- a/test/definitions.yml
+++ b/test/definitions.yml
@@ -4,7 +4,7 @@ in: |-
   dl. textile:a cloth, especially one manufactured by weaving or knitting; a fabric
   format:the arrangement of data for storage or display.
 out: |-
-  <p>here is a real definition list:</p>
+  <p>here is a Movable Type-style definition list:</p>
   
   <dl>
   	<dt>textile</dt>
