--- a/test/code.yml
+++ b/test/code.yml
@@ -4,8 +4,8 @@ in: 'This is an empty dictionary: @{}@'
 out: '<p>This is an empty dictionary: <code>{}</code></p>'
 ---
 name: inline code escapement
-in: 'Please type @cat file.txt > otherfile.txt@ at the prompt.'
-out: '<p>Please type <code>cat file.txt &gt; otherfile.txt</code> at the prompt.</p>'
+in: 'Please type @cat "file.txt" > otherfile.txt@ at the prompt.'
+out: '<p>Please type <code>cat "file.txt" &gt; otherfile.txt</code> at the prompt.</p>'
 ---
 name: escaping in blockcode
 in: 'bc. This is within a block of code, so < and > should be entities.  You can talk about a <p class="foo"> tag if you wish and it will be properly escaped.'
