--- a/test/textism.yml
+++ b/test/textism.yml
@@ -1,13 +1,17 @@
 ---
+name: header one
 in: h1. Header 1
 out: <h1>Header 1</h1>
 ---
+name: header two
 in: h2. Header 2
 out: <h2>Header 2</h2>
 ---
+name: header three
 in: h3. Header 3
 out: <h3>Header 3</h3>
 ---
+name: blockquote
 in: |-
   Any old text.
 
@@ -24,12 +28,6 @@ out: |-
   
   	<p>Any old text.</p>
 
----
-in: This is covered elsewhere[1].
-out: <p>This is covered elsewhere<sup class="footnote"><a href="#fn1">1</a></sup>.</p>
----
-in: fn1. Down here, in fact.
-out: <p id="fn1" class="footnote"><sup>1</sup> Down here, in fact.</p>
 ---
 in: |-
   # A first item
@@ -88,7 +86,7 @@ in: ~a phrase~
 out: <p><sub>a phrase</sub></p>
 ---
 in: %(caps)SPAN%
-out: <p><span class="caps">SPAN</span>
+out: <p><span class="caps">SPAN</span></p>
 ---
 in: %{color:red}red%
 out: <p><span style="color:red">red</span></p>
@@ -193,15 +191,7 @@ out: |-
   		</tr>
   	</table>
 ---
-in: |-
-  This is a "link":bob to Bob's website.
-  
-  [bob]http://itsbob.com/index.html
-out: '<p>This is a <a href="http://itsbob.com/index.html">link</a> to Bob&#8217;s website.</p>'
----
-in: ACLU(American Civil Liberties Union)
-out: <p><acronym title="American Civil Liberties Union">ACLU</acronym></p>
----
+name: basics
 in: |-
   h2{color:green}. This is a title
 
@@ -257,6 +247,7 @@ out: |-
   	<li>three</li>
   </ol>
 ---
+name: tougher stuff
 in: |-
 
   Multi-level list:
@@ -320,19 +311,13 @@ out: |-
   	<p>Well, that went well. How about we insert an <a href="/" title="watch out">old-fashioned hypertext link</a>? Will the quote marks in the tags get messed up? No!</p>
   	<p><a href="http://www.textism.com" title="optional title">This is a link</a></p>
 ---
+name: table
 in: |-
-  "This is a link (optional title)":http://www.textism.com
-  
   table{border:1px solid black}.
   |_. this|_. is|_. a|_. header|
   <{background:gray}. |\2. this is|{background:red;width:200px}. a|^<>{height:200px}. row|
   |this|<>{padding:10px}. is|^. another|(bob#bob). row|
-  
-  An image:
-  
-  !/common/textist.gif(optional alt text)!
 out: |-
-  	<p><a href="http://www.textism.com" title="optional title">This is a link</a></p>
   	<table style="border:1px solid black">
   		<tr>
   			<th>this</th>
@@ -352,8 +337,6 @@ out: |-
   			<td class="bob" id="bob">row</td>
   		</tr>
   	</table>
-  	<p>An image:</p>
-  	<p><img src="/common/textist.gif" title="optional alt text" alt="optional alt text" /></p>
 ---
 in: |-
   An image:
@@ -374,9 +357,10 @@ out: |-
   	<li>Yes they do</li>
   	<li>But you knew that</li>
   </ol>
-  	<p>Some more text of dubious character. Here is a noisome string of <span class="caps">CAPITAL</span> letters. Here is something we want to <em>emphasize</em>.<br />
-  That was a linebreak. And something to indicate <strong>strength</strong>. Of course I could use <em>my own <span class="caps">HTML</span> tags</em> if I <strong>felt</strong> like it.</p>
+  	<p>Some more text of dubious character. Here is a noisome string of CAPITAL letters. Here is something we want to <em>emphasize</em>.<br />
+  That was a linebreak. And something to indicate <strong>strength</strong>. Of course I could use <em>my own HTML tags</em> if I <strong>felt</strong> like it.</p>
 ---
+name: code
 in: |-
   h3. Coding
   
@@ -394,13 +378,6 @@ in: |-
   This isn't code.
   
   
-  So you see, my friends:
-  
-  * The time is now
-  * The time is not later
-  * The time is not yesterday
-  * We must act
-
 out: |-
   	<h3>Coding</h3>
   	<p>This <code>is some code, "isn't it"</code>. Watch those quote marks! Now for some preformatted text:</p>
@@ -411,21 +388,10 @@ out: |-
       $text = str_replace("%::%","",$text);
   </code>
   </pre>
-  	<p>This isn&#8217;t code.</p>
-  	<p>So you see, my friends:</p>
-  <ul>
-  	<li>The time is now</li>
-  	<li>The time is not later</li>
-  	<li>The time is not yesterday</li>
-  	<li>We must act</li>
-  </ul>
+  
+  <p>This isn&#8217;t code.</p>
 ---
-in: |-
-  trivial
-  break
-out: |-
-  <p>trivial<br />break</p>
----
+name: hard break
 in: |-
   trivial
   break
@@ -436,6 +402,7 @@ out: |-
   
   	<p>next</p>
 ---
+name: normal paragraphs
 in: |-
   trivial
 
@@ -445,6 +412,7 @@ out: |-
 
   	<p>paragraphs</p>
 ---
+name: hard break in a list
 in: |-
   * first line
   * second
