--- a/test/images.yml
+++ b/test/images.yml
@@ -26,6 +26,9 @@ out: <p>This is an <img src="http://example.com/i/image.jpg#a1" alt="" />.</p>
 in:  This is not an image!!!
 out: <p>This is not an image!!!</p>
 ---
+in:  This is not an! image!
+out: <p>This is not an! image!</p>
+---
 in:  This is an !http://example.com/i/image.jpg!:#1
 out: <p>This is an <a href="#1"><img src="http://example.com/i/image.jpg" alt="" /></a></p>
 ---
