Fix missing second number of dimension [the clever parts courtesy Johan Sorensen].

--- a/test/hobix.yml
+++ b/test/hobix.yml
@@ -56,9 +56,17 @@ in: Observe...
 out: <p>Observe&#8230;</p>
 --- 
 name: dimension sign
-desc: The letter ‘x’ becomes a dimension sign when used alone.
-in: "Observe: 2 x 2."
-out: "<p>Observe: 2&#215;2.</p>"
+desc: The letter 'x' becomes a dimension sign when used between digits.
+in: "Observe: 2x3."
+out: "<p>Observe: 2 &#215; 3.</p>"
+--- 
+name: dimension sign with spaces
+in: "Observe: 2 x 4."
+out: "<p>Observe: 2 &#215; 4.</p>"
+--- 
+name: dimension signs chained
+in: "Observe: 2x3x4."
+out: "<p>Observe: 2 &#215; 3 &#215; 4.</p>"
 --- 
 name: trademark and copyright
 desc: Conversion of trademark and copyright symbols.
