--- a/test/table.yml
+++ b/test/table.yml
@@ -193,7 +193,7 @@ out: |-
   			<td>11/29/04</td>
   			<td>11/29/04</td>
   			<td>011</td>
-  			<td>XML spec complete (KH is on schedule)</td>
+  			<td><span class="caps">XML</span> spec complete (KH is on schedule)</td>
   		</tr>
   		<tr>
   			<td><img src="/i/g.gif" alt="" /></td>
