--- a/test/textism.yml
+++ b/test/textism.yml
@@ -102,7 +102,7 @@ in: %(caps)SPAN%
 out: <p><span class="caps">SPAN</span></p>
 ---
 in: %{color:red}red%
-out: <p><span style="color:red">red</span></p>
+out: <p><span style="color:red;">red</span></p>
 ---
 in: %[fr]rouge%
 out: <p><span lang="fr">rouge</span></p>
@@ -114,7 +114,7 @@ in: p(bob). A paragraph
 out: <p class="bob">A paragraph</p>
 ---
 in: p{color:#ddd}. A paragraph
-out: <p style="color:#ddd">A paragraph</p>
+out: <p style="color:#ddd;">A paragraph</p>
 ---
 in: p[fr]. A paragraph
 out: <p lang="fr">A paragraph</p>
@@ -126,10 +126,10 @@ in: h3=. centered header
 out: <h3 style="text-align:center;">centered header</h3>
 ---
 in: '!>/image.gif! right-aligned image'
-out: <p style="float:right"><img src="/image.gif" alt="" /> right-aligned image</p>
+out: <p style="float:right;"><img src="/image.gif" alt="" /> right-aligned image</p>
 ---
 in: p[no]{color:red}. A Norse of a different colour.
-out: <p style="color:red" lang="no">A Norse of a different colour.</p>
+out: <p style="color:red;" lang="no">A Norse of a different colour.</p>
 ---
 in: |-
   |This|is|a|simple|table|
@@ -157,7 +157,7 @@ in: |-
   |This|is|a|row|
   |This|is|a|row|
 out: |-
-  <table style="border:1px solid black">
+  <table style="border:1px solid black;">
   		<tr>
   			<td>This</td>
   			<td>is</td>
@@ -175,7 +175,7 @@ out: |-
 in: '{background:#ddd}. |This|is|a|row|'
 out: |-
   <table>
-  		<tr style="background:#ddd">
+  		<tr style="background:#ddd;">
   			<td>This</td>
   			<td>is</td>
   			<td>a</td>
@@ -191,7 +191,7 @@ in: |-
 out: |-
   <table>
   		<tr>
-  			<td style="background:#ddd">Cell with gray background</td>
+  			<td style="background:#ddd;">Cell with gray background</td>
   		</tr>
   		<tr>
   			<td colspan="2">Cell spanning 2 columns</td>
@@ -232,14 +232,14 @@ in: |-
   # three
   
 out: |-
-  <h2 style="color:green">This is a title</h2>
+  <h2 style="color:green;">This is a title</h2>
   	<h3>This is a subhead</h3>
-  	<p style="color:red">This is some text of dubious character. Isn&#8217;t the use of &#8220;quotes&#8221; just lazy writing &#8212; and theft of &#8216;intellectual property&#8217; besides? I think the time has come to see a block quote.</p>
+  	<p style="color:red;">This is some text of dubious character. Isn&#8217;t the use of &#8220;quotes&#8221; just lazy writing &#8212; and theft of &#8216;intellectual property&#8217; besides? I think the time has come to see a block quote.</p>
   	<blockquote lang="fr">
   		<p lang="fr">This is a block quote. I&#8217;ll admit it&#8217;s not the most exciting block quote ever devised.</p>
   	</blockquote>
   	<p>Simple list:</p>
-  <ol style="color:blue">
+  <ol style="color:blue;">
   	<li>one</li>
   	<li>two</li>
   	<li>three</li>
@@ -331,17 +331,17 @@ in: |-
   <{background:gray}. |\2. this is|{background:red;width:200px}. a|^<>{height:200px}. row|
   |this|<>{padding:10px}. is|^. another|(bob#bob). row|
 out: |-
-  	<table style="border:1px solid black">
+  	<table style="border:1px solid black;">
   		<tr>
   			<th>this</th>
   			<th>is</th>
   			<th>a</th>
   			<th>header</th>
   		</tr>
-  		<tr style="text-align:left;background:gray">
+  		<tr style="text-align:left;background:gray;">
   			<td colspan="2">this is</td>
-  			<td style="background:red;width:200px">a</td>
-  			<td style="vertical-align:top;text-align:justify;height:200px">row</td>
+  			<td style="background:red;width:200px;">a</td>
+  			<td style="vertical-align:top;text-align:justify;height:200px;">row</td>
   		</tr>
   		<tr>
   			<td>this</td>
