--- a/test/table.yml
+++ b/test/table.yml
@@ -64,7 +64,7 @@ in: |-
   |This|is|a|row|
   |This|is|a|row|
 out: |-
-  <table style="border:1px solid black">
+  <table style="border:1px solid black;">
   		<tr>
   			<td>This</td>
   			<td>is</td>
@@ -83,7 +83,7 @@ out: |-
 in: '{background:#ddd}. |This|is|a|row|'
 out: |-
   <table>
-  		<tr style="background:#ddd">
+  		<tr style="background:#ddd;">
   			<td>This</td>
   			<td>is</td>
   			<td>a</td>
@@ -157,7 +157,7 @@ in: |-
 out: |-
   <table>
   		<tr>
-  			<td style="background:#ddd">Cell with gray background</td>
+  			<td style="background:#ddd;">Cell with gray background</td>
   		</tr>
   		<tr>
   			<td colspan="2">Cell spanning 2 columns</td>
@@ -181,7 +181,7 @@ in: |
   |!/i/w.gif!|12/03/04| |081|Feature complete|
 out: |-
   <table>
-  		<tr style="background:#ddd">
+  		<tr style="background:#ddd;">
   			<td>S</td>
   			<td>Target</td>
   			<td>Complete</td>
