Removing the part of test_threshold_image_links where a blank alt also causes a blank title, but only when a URL is specified.  Appears to be a bug.  classTextile.php clearly intends for the title attribute to be nonexistent when no alt attribute is specified.

--- a/test/threshold.yml
+++ b/test/threshold.yml
@@ -191,7 +191,7 @@ out: <p><img src="/img.gif" title="alt text" alt="alt text" /></p>
 name: image links
 desc: Images may be combined with links by using an !image! in place of the link text.
 in: "!/img.gif!:http://textpattern.com/"
-out: <p><a href="http://textpattern.com/"><img src="/img.gif" title="" alt="" /></a></p>
+out: <p><a href="http://textpattern.com/"><img src="/img.gif" alt="" /></a></p>
 ---
 name: headers
 desc: Headers are represented by h1., h2., … h6..
